--- a/etc/encoding/youtube-movies.properties
+++ b/etc/encoding/youtube-movies.properties
@@ -31,7 +31,7 @@ profile.youtube-hd.http.input = visual
 profile.youtube-hd.http.output = visual
 profile.youtube-hd.http.suffix = -yt-hd.mp4
 profile.youtube-hd.http.mimetype = video/mp4
-profile.youtube-hd.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 1280x720 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 -deblockalpha 0 -deblockbeta 0 #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-hd.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 1280x720 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 -deblockalpha 0 -deblockbeta 0 #{out.dir}/#{out.name}#{out.suffix}
 
 # Distribution format definition for youtube hd quality vga
 profile.youtube-vga-hd.http.name = youtube hd quality vga
@@ -39,7 +39,7 @@ profile.youtube-vga-hd.http.input = visual
 profile.youtube-vga-hd.http.output = visual
 profile.youtube-vga-hd.http.suffix = -yt-hd-vga.mp4
 profile.youtube-vga-hd.http.mimetype = video/mp4
-profile.youtube-vga-hd.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-vga-hd.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
 
 
 
@@ -49,7 +49,7 @@ profile.youtube-high.http.input = visual
 profile.youtube-high.http.output = visual
 profile.youtube-high.http.suffix = -yt-high.mp4
 profile.youtube-high.http.mimetype = video/mp4
-profile.youtube-high.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 1280x720 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 -deblockalpha 0 -deblockbeta 0 #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-high.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 1280x720 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 -deblockalpha 0 -deblockbeta 0 #{out.dir}/#{out.name}#{out.suffix}
 
 # Distribution format definition for youtube high quality vga
 profile.youtube-vga-high.http.name = youtube high quality vga
@@ -57,7 +57,7 @@ profile.youtube-vga-high.http.input = visual
 profile.youtube-vga-high.http.output = visual
 profile.youtube-vga-high.http.suffix = -yt-high-vga.mp4
 profile.youtube-vga-high.http.mimetype = video/mp4
-profile.youtube-vga-high.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -s 1024x768 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-vga-high.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -s 1024x768 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
 
 
 
@@ -67,7 +67,17 @@ profile.youtube-med.http.input = visual
 profile.youtube-med.http.output = visual
 profile.youtube-med.http.suffix = -yt-med.mp4
 profile.youtube-med.http.mimetype = video/mp4
-profile.youtube-med.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 852x480 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 #{out.dir}/#{out.name}#{out.suffix}
+#profile.youtube-med.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 25 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250 -s 852x480 -coder 1 -flags +loop  -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8   -subq 7 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -rc_eq 'blurCplx^(1-qComp)' -bf 16 -b_strategy 1 -bidir_refine 1 -refs 6 #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-med.http.ffmpeg.command = -i #{in.video.path} -acodec libfaac -ac 2 -ar 48000 -ab 192k -r 30000/1001 -s 320x240 -b 200k -bt 240k -vcodec libx264 -vpre ipod320  #{out.dir}/#{out.name}#{out.suffix}
+
+# Distribution format definition for youtube med quality vga
+#profile.youtube-vga-med.http.name = youtube med quality vga
+#profile.youtube-vga-med.http.input = visual
+#profile.youtube-vga-med.http.output = visual
+#profile.youtube-vga-med.http.suffix = -yt-med-vga.mp4
+#profile.youtube-vga-med.http.mimetype = video/mp4
+#profile.youtube-vga-med.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -s 800x600 -vcodec libx264 -vpre baseline -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
+
 
 # Distribution format definition for youtube med quality vga
 profile.youtube-vga-med.http.name = youtube med quality vga
@@ -75,5 +85,5 @@ profile.youtube-vga-med.http.input = visual
 profile.youtube-vga-med.http.output = visual
 profile.youtube-vga-med.http.suffix = -yt-med-vga.mp4
 profile.youtube-vga-med.http.mimetype = video/mp4
-profile.youtube-vga-med.http.ffmpeg.command = -i #{in.video.path} -acodec libmp3lame -ab 64k -ar 22050 -r 10 -s 800x600 -vcodec libx264 -vpre default -level 41 -crf 20 -bufsize 20000k -maxrate 25000k -g 250  #{out.dir}/#{out.name}#{out.suffix}
+profile.youtube-vga-med.http.ffmpeg.command = -i #{in.video.path} -acodec libfaac -ac 2 -ar 48000 -ab 192k -r 30000/1001 -s 320x240 -b 200k -bt 240k -vcodec libx264 -vpre ipod320  #{out.dir}/#{out.name}#{out.suffix}
 
