Added missing hydrant config properties (VOV-372)

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -180,3 +180,8 @@ org.opencastproject.anonymous.feedback.url=http://opencast.org/form/tracking
 
 # Email address of the server's admin.
 org.opencastproject.admin.email = admin@localhost
+
+org.opencastproject.hydrant.url=http://localhost:3000/
+org.opencastproject.hydrant.admin.username=archivist1@example.com
+org.opencastproject.hydrant.admin.password=archivist1
+
