--- a/etc/config.properties
+++ b/etc/config.properties
@@ -76,10 +76,10 @@ org.opencastproject.security.demo.loadusers = true
 # ${org.opencastproject.server.url} can not be used, because the streaming server does not use the HTTP protocol.
 # Streaming is not included in the default workflow, since the Red5 streaming server is a 3rd party component that
 # requires separate installation.
-org.opencastproject.streaming.url=rtmp://localhost/matterhorn-engage
+org.opencastproject.streaming.url=rtmp://localhost/vod
 
 # The directory where the matterhorn streaming app for Red5 stores the streams
-org.opencastproject.streaming.directory=${felix.home}/../red5/webapps/matterhorn/streams
+org.opencastproject.streaming.directory=/opt/adobe/fms/applications/vod/media
 
 # The directory to store media, metadata, and attachments for download from the engage tool
 org.opencastproject.download.directory=${org.opencastproject.storage.dir}/downloads
