Create mp4s instead of flvs

--- a/etc/encoding/hydrant-movies.properties
+++ b/etc/encoding/hydrant-movies.properties
@@ -3,7 +3,7 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -r 15 -vcodec libx264 -profile baseline -preset slow -b 250k -maxrate 250k -bufsize 500k -vf scale=-1:360 -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile baseline -preset slow -b 250k -maxrate 250k -bufsize 500k -vf scale=-1:360 -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
