--- a/etc/encoding/hydrant-movies.properties
+++ b/etc/encoding/hydrant-movies.properties
@@ -19,9 +19,9 @@ profile.mp4-high.http.suffix = -high.mp4
 profile.mp4-high.http.mimetype = video/mp4
 profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile high -preset slow -b 1000k -maxrate 1000k -bufsize 2000k -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
-profile.mp3.http.name = mp3
-profile.mp3.http.input = audio
-profile.mp3.http.output = audio
-profile.mp3.http.suffix = -audio.mp3
-profile.mp3.http.mimetype = audio/mp3
-profile.mp3.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -vn -f mp3 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp3-medium.http.name = mp3
+profile.mp3-medium.http.input = audio
+profile.mp3-medium.http.output = audio
+profile.mp3-medium.http.suffix = -audio.mp3
+profile.mp3-medium.http.mimetype = audio/mp3
+profile.mp3-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -vn -f mp3 #{out.dir}/#{out.name}#{out.suffix}
