--- a/etc/encoding/hydrant-movies.properties
+++ b/etc/encoding/hydrant-movies.properties
@@ -25,3 +25,10 @@ profile.mp3-medium.http.output = audio
 profile.mp3-medium.http.suffix = -audio.mp3
 profile.mp3-medium.http.mimetype = audio/mp3
 profile.mp3-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -vn -f mp3 #{out.dir}/#{out.name}#{out.suffix}
+
+profile.aac-medium.http.name = aac
+profile.aac-medium.http.input = audio
+profile.aac-medium.http.output = audio
+profile.aac-medium.http.suffix = -audio.mp4
+profile.aac-medium.http.mimetype = audio/mp4
+profile.aac-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
