Use low, medium, high profiles. Remove distribute-hydrant from audio workflow

--- a/etc/encoding/hydrant-movies.properties
+++ b/etc/encoding/hydrant-movies.properties
@@ -10,14 +10,14 @@ profile.mp4-medium.http.input = visual
 profile.mp4-medium.http.output = visual
 profile.mp4-medium.http.suffix = -medium.mp4
 profile.mp4-medium.http.mimetype = video/mp4
-profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile high -preset slow -b 500k -maxrate 500k -bufsize 1000k -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile baseline -preset slow -b 500k -maxrate 500k -bufsize 1000k -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp4-high.http.name = High Quality Video
 profile.mp4-high.http.input = visual
 profile.mp4-high.http.output = visual
 profile.mp4-high.http.suffix = -high.mp4
 profile.mp4-high.http.mimetype = video/mp4
-profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile high -preset slow -b 1000k -maxrate 1000k -bufsize 2000k -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vcodec libx264 -profile baseline -preset slow -b 1000k -maxrate 1000k -bufsize 2000k -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp3-medium.http.name = mp3
 profile.mp3-medium.http.input = audio
