--- a/etc/config.properties
+++ b/etc/config.properties
@@ -60,9 +60,9 @@ org.opencastproject.security.digest.nonce.base.time=300
 org.opencastproject.security.digest.nonce.variable.time=300
 
 # Optional demo account with administrative rights. 
-org.opencastproject.security.demo.admin.user=admin
-org.opencastproject.security.demo.admin.pass=opencast
-org.opencastproject.security.demo.admin.roles=ROLE_ADMIN,ROLE_USER,ROLE_OAUTH_USER
+org.opencastproject.security.admin.user=admin
+org.opencastproject.security.admin.pass=opencast
+org.opencastproject.security.admin.roles=ROLE_ADMIN,ROLE_USER,ROLE_OAUTH_USER
 
 # Optional demo accounts with series memberships, but not administrative rights.  If set to 'true', 1000 users will be
 # loaded into the sample user directory.  Usernames are user0, ..., user999.  Passwords are pass0, ..., pass999.
@@ -189,7 +189,5 @@ org.opencastproject.anonymous.feedback.url=http://opencast.org/form/tracking
 # Email address of the server's admin.
 org.opencastproject.admin.email = admin@localhost
 
-org.opencastproject.hydrant.url=http://localhost:3000/
-org.opencastproject.hydrant.admin.username=archivist1@example.com
-org.opencastproject.hydrant.admin.password=archivist1
-
+# Url for the matterhorn-workflow-notifier-avalon to contact
+org.avalonmediasystem.avalon.url = http://localhost:3000/
