HLS module to use configured bin path, fixed mp4-low profile

--- a/etc/encoding/hydrant.properties
+++ b/etc/encoding/hydrant.properties
@@ -3,7 +3,7 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1 -vcodec libx264 -profile baseline -preset slow -b 500k -maxrate 500k -bufsize 1000k -threads 0 -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1 -vcodec libx264 -profile baseline -pix_fmt yuv420p -preset slow -b 500k -maxrate 500k -bufsize 1000k -threads 0 -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
 
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
