Force to stereo for high quality AAC audio to avoid libfaac sampling rate requirement

--- a/etc/encoding/hydrant.properties
+++ b/etc/encoding/hydrant.properties
@@ -38,4 +38,4 @@ profile.aac-high.http.input = audio
 profile.aac-high.http.output = audio
 profile.aac-high.http.suffix = -audio-high.mp4
 profile.aac-high.http.mimetype = audio/mp4
-profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 320k -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
