--- a/conf/config.properties
+++ b/conf/config.properties
@@ -204,7 +204,7 @@ org.opencastproject.fedora.url=http://localhost:8983/fedora
 org.opencastproject.fedora.admin.username=fedoraAdmin
 org.opencastproject.fedora.admin.password=fedoraAdmin
 
-org.opencastproject.hydrant.url=http://localhost:3000/
-org.opencastproject.hydrant.admin.username=archivist1@example.com
-org.opencastproject.hydrant.admin.password=archivist1
+org.opencastproject.avalon.url=http://localhost:3000/
+org.opencastproject.avalon.admin.username=archivist1@example.com
+org.opencastproject.avalon.admin.password=archivist1
 
