Put resolution scaling back into the encoding profiles

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -3,21 +3,21 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1 -vcodec libx264 -profile baseline -pix_fmt yuv420p -preset slow -b 500k -maxrate 500k -bufsize 1000k -threads 0 -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh/a/2)*2:360 -vcodec libx264 -profile baseline -pix_fmt yuv420p -preset slow -b 500k -maxrate 500k -bufsize 1000k -threads 0 -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
 profile.mp4-medium.http.output = visual
 profile.mp4-medium.http.suffix = -medium.mp4
 profile.mp4-medium.http.mimetype = video/mp4
-profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1 -vcodec libx264 -profile high -pix_fmt yuv420p -preset slow -b 2M -maxrate 2M -bufsize 4M -threads 0 -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh/a/2)*2:480 -vcodec libx264 -profile high -pix_fmt yuv420p -preset slow -b 2M -maxrate 2M -bufsize 4M -threads 0 -acodec libfaac -ab 128k -ar 44100 #{out.dir}/#{out.name}#{out.suffix} 
 
 profile.mp4-high.http.name = High Quality Video
 profile.mp4-high.http.input = visual
 profile.mp4-high.http.output = visual
 profile.mp4-high.http.suffix = -high.mp4
 profile.mp4-high.http.mimetype = video/mp4
-profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1 -vcodec libx264 -profile high -pix_fmt yuv420p -preset slow -b 4M -maxrate 4M -bufsize 8M -threads 0 -acodec libfaac -ab 192k -ar 48000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh/a/2)*2:720 -vcodec libx264 -profile high -pix_fmt yuv420p -preset slow -b 4M -maxrate 4M -bufsize 8M -threads 0 -acodec libfaac -ab 192k -ar 48000 #{out.dir}/#{out.name}#{out.suffix} 
 
 profile.mp3-medium.http.name = mp3
 profile.mp3-medium.http.input = audio
