--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -3,7 +3,7 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*a/2)*2:360 -vcodec libx264 -profile high -preset fast -b 1M -maxrate 1M -bufsize 2M -threads 0 -r 30 -pix_fmt yuv420p -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*a/2)*2:360 -vcodec libx264 -profile baseline -preset fast -b 1M -maxrate 1M -bufsize 2M -threads 0 -r 30 -pix_fmt yuv420p -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
 
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
