--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -31,11 +31,11 @@ profile.aac-medium.http.input = audio
 profile.aac-medium.http.output = audio
 profile.aac-medium.http.suffix = -audio-medium.mp4
 profile.aac-medium.http.mimetype = audio/mp4
-profile.aac-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
 
 profile.aac-high.http.name = aac
 profile.aac-high.http.input = audio
 profile.aac-high.http.output = audio
 profile.aac-high.http.suffix = -audio-high.mp4
 profile.aac-high.http.mimetype = audio/mp4
-profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
