--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -3,21 +3,21 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*a/2)*2:360 -vcodec libx264 -preset fast -b 1M -maxrate 1M -bufsize 2M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:360 -vcodec libx264 -preset fast -b 1M -maxrate 1M -bufsize 2M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
  
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
 profile.mp4-medium.http.output = visual
 profile.mp4-medium.http.suffix = -medium.mp4
 profile.mp4-medium.http.mimetype = video/mp4
-profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*a/2)*2:480 -vcodec libx264 -preset fast -b 2M -maxrate 2M -bufsize 4M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 192k -ar 48000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:480 -vcodec libx264 -preset fast -b 2M -maxrate 2M -bufsize 4M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 192k -ar 48000 #{out.dir}/#{out.name}#{out.suffix} 
  
 profile.mp4-high.http.name = High Quality Video
 profile.mp4-high.http.input = visual
 profile.mp4-high.http.output = visual
 profile.mp4-high.http.suffix = -high.mp4
 profile.mp4-high.http.mimetype = video/mp4
-profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*a/2)*2:720 -vcodec libx264 -preset fast -b 4M -maxrate 4M -bufsize 8M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 256k -ar 48000 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:720 -vcodec libx264 -preset fast -b 4M -maxrate 4M -bufsize 8M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 256k -ar 48000 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp3-medium.http.name = mp3
 profile.mp3-medium.http.input = audio
