skip transcoding encoding profile

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -39,3 +39,15 @@ profile.aac-high.http.output = audio
 profile.aac-high.http.suffix = -audio-high.mp4
 profile.aac-high.http.mimetype = audio/mp4
 profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+
+
+profile.skip-transcoding.http.name = Skip Transcoding Video
+profile.skip-transcoding.http.input = visual
+profile.skip-transcoding.http.output = visual
+profile.skip-transcoding.http.suffix = -skip-transcoding.mp4
+profile.skip-transcoding.http.mimetype = video/mp4
+profile.skip-transcoding.http.ffmpeg.command = -i #{in.video.path} -vcodec copy -threads 0 -acodec copy #{out.dir}/#{out.name}#{out.suffix}
+
+
+profile.pass
+
