--- a/etc/load/org.opencastproject.organization-mh_default_org.cfg
+++ b/etc/load/org.opencastproject.organization-mh_default_org.cfg
@@ -38,3 +38,6 @@ prop.engageui.link_mobile_redirect.enable=false
 prop.engageui.link_mobile_redirect.url=http://opencast.org/matterhorn/
 # Description for the mobile redirect, possible values: Text
 prop.engageui.link_mobile_redirect.description=For more information have a look at the official site.
+
+# Avalon specific properties
+prop.avalon.stream_base=file://${org.opencastproject.streaming.directory}
