add support for skipping transcoding for audio files

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -48,3 +48,11 @@ profile.skip-transcoding.http.suffix = -skip-transcoding.mp4
 profile.skip-transcoding.http.mimetype = video/mp4
 profile.skip-transcoding.http.ffmpeg.command = -i #{in.video.path} -vcodec copy -threads 0 -acodec copy #{out.dir}/#{out.name}#{out.suffix}
 
+
+profile.skip-transcoding-audio.http.name = Skip Transcoding Audio
+profile.skip-transcoding-audio.http.input = audio
+profile.skip-transcoding-audio.http.output = audio
+profile.skip-transcoding-audio.http.suffix = -audio-high.mp4
+profile.skip-transcoding-audio.http.mimetype = audio/mp4
+profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
+
