--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -52,7 +52,7 @@ profile.skip-transcoding.http.ffmpeg.command = -i #{in.video.path} -vcodec copy 
 profile.skip-transcoding-audio.http.name = Skip Transcoding Audio
 profile.skip-transcoding-audio.http.input = audio
 profile.skip-transcoding-audio.http.output = audio
-profile.skip-transcoding-audio.http.suffix = -audio-high.mp4
+profile.skip-transcoding-audio.http.suffix = -skip-transcoding-audio-high.#{in.video.suffix}
 profile.skip-transcoding-audio.http.mimetype = audio/mp4
 profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
 
