--- a/etc/services/org.ops4j.pax.logging.properties
+++ b/etc/services/org.ops4j.pax.logging.properties
@@ -2,6 +2,7 @@ log4j.rootLogger=ERROR,stdout,file
 
 # Loglevel configuration
 log4j.logger.org.opencastproject=INFO
+log4j.logger.org.avalonmediasystem=INFO
 
 # Console logging
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
