Update encoding profiles

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -3,21 +3,21 @@ profile.mp4-low.http.input = visual
 profile.mp4-low.http.output = visual
 profile.mp4-low.http.suffix = -low.mp4
 profile.mp4-low.http.mimetype = video/mp4
-profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:360 -vcodec libx264 -preset fast -b 1M -maxrate 1M -bufsize 2M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 96k -ar 32000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-low.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:360 -vcodec libx264 -preset fast -profile baseline -level 3.0 -tune film -b 500k -maxrate 500k -bufsize 1M -bf 0 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced*2) -pix_fmt yuv420p -acodec libfaac -ab 64k -ar 44100 -movflags faststart #{out.dir}/#{out.name}#{out.suffix} 
  
 profile.mp4-medium.http.name = Medium Quality Video
 profile.mp4-medium.http.input = visual
 profile.mp4-medium.http.output = visual
 profile.mp4-medium.http.suffix = -medium.mp4
 profile.mp4-medium.http.mimetype = video/mp4
-profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:480 -vcodec libx264 -preset fast -b 2M -maxrate 2M -bufsize 4M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 192k -ar 48000 #{out.dir}/#{out.name}#{out.suffix} 
+profile.mp4-medium.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:480 -vcodec libx264 -preset fast -profile main -level 3.1 -tune film -b 1M -maxrate 1M -bufsize 2M -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced*2) -pix_fmt yuv420p -acodec libfaac -ab 128k -ar 44100 -movflags faststart #{out.dir}/#{out.name}#{out.suffix} 
  
 profile.mp4-high.http.name = High Quality Video
 profile.mp4-high.http.input = visual
 profile.mp4-high.http.output = visual
 profile.mp4-high.http.suffix = -high.mp4
 profile.mp4-high.http.mimetype = video/mp4
-profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:720 -vcodec libx264 -preset fast -b 4M -maxrate 4M -bufsize 8M -refs 5 -me_method umh -bf 0 -subq 8 -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced/2) -pix_fmt yuv420p -acodec libfaac -ab 256k -ar 48000 #{out.dir}/#{out.name}#{out.suffix}
+profile.mp4-high.http.ffmpeg.command = -i #{in.video.path} -vf yadif=0:-1:1,scale=trunc(oh*dar/2)*2:720 -vcodec libx264 -preset fast -profile main -level 3.1 -tune film -b 2M -maxrate 2M -bufsize 4M -threads 0 -r 30 -force_key_frames expr:gte(t,n_forced*2) -pix_fmt yuv420p -acodec libfaac -ab 128k -ar 44100 -movflags faststart #{out.dir}/#{out.name}#{out.suffix}
 
 profile.mp3-medium.http.name = mp3
 profile.mp3-medium.http.input = audio
@@ -38,7 +38,7 @@ profile.aac-high.http.input = audio
 profile.aac-high.http.output = audio
 profile.aac-high.http.suffix = -audio-high.mp4
 profile.aac-high.http.mimetype = audio/mp4
-profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ar 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
 
 
 profile.skip-transcoding.http.name = Skip Transcoding Video
@@ -54,5 +54,5 @@ profile.skip-transcoding-audio.http.input = audio
 profile.skip-transcoding-audio.http.output = audio
 profile.skip-transcoding-audio.http.suffix = -skip-transcoding-audio-high.#{in.video.suffix}
 profile.skip-transcoding-audio.http.mimetype = audio/mp4
-profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
+profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ar 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
 
