Fix typo in ffmpeg option

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -54,5 +54,5 @@ profile.skip-transcoding-audio.http.input = audio
 profile.skip-transcoding-audio.http.output = audio
 profile.skip-transcoding-audio.http.suffix = -skip-transcoding-audio-high.#{in.video.suffix}
 profile.skip-transcoding-audio.http.mimetype = audio/mp4
-profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ar 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
+profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
 
