Fix typo in ffmpeg option

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -38,7 +38,7 @@ profile.aac-high.http.input = audio
 profile.aac-high.http.output = audio
 profile.aac-high.http.suffix = -audio-high.mp4
 profile.aac-high.http.mimetype = audio/mp4
-profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ar 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-high.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
 
 
 profile.skip-transcoding.http.name = Skip Transcoding Video
