Fix inconsistencies in audio encoding profiles (VOV-3953 and VOV-3954)

--- a/etc/encoding/avalon.properties
+++ b/etc/encoding/avalon.properties
@@ -31,7 +31,7 @@ profile.aac-medium.http.input = audio
 profile.aac-medium.http.output = audio
 profile.aac-medium.http.suffix = -audio-medium.mp4
 profile.aac-medium.http.mimetype = audio/mp4
-profile.aac-medium.http.ffmpeg.command = -i #{in.video.path} -ar 44100 -ab 128k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.aac-medium.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 128k -vn -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
 
 profile.aac-high.http.name = aac
 profile.aac-high.http.input = audio
@@ -54,5 +54,5 @@ profile.skip-transcoding-audio.http.input = audio
 profile.skip-transcoding-audio.http.output = audio
 profile.skip-transcoding-audio.http.suffix = -skip-transcoding-audio-high.#{in.video.suffix}
 profile.skip-transcoding-audio.http.mimetype = audio/mp4
-profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -ac 2 -ar 44100 -ab 320k -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
+profile.skip-transcoding-audio.http.ffmpeg.command = -i #{in.video.path} -vn -acodec copy #{out.dir}/#{out.name}#{out.suffix}
 
