--- a/etc/services/org.ops4j.pax.logging.properties
+++ b/etc/services/org.ops4j.pax.logging.properties
@@ -6,6 +6,7 @@ log4j.logger.org.avalonmediasystem=INFO
 
 # Console logging
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %5p (%C{1}:%L) - %m%n
 
